targets/srv0/k3s/jellyfin/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-jellyfin-ingress
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: jellyfin
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: seerr
        - podSelector:
            matchLabels:
              app: radarr
        - podSelector:
            matchLabels:
              app: sonarr
      ports:
        - port: 8096
  policyTypes:
    - Ingress
